# t-test

./: .gitignore  README.md
asm/: assemble.sh  lib32.asm  lib64.asm  libttest64.asm  t-test32.asm  t-test64.asm
c/: CMakeLists.txt
c#.net/: DataFile.cs  TTest.cs  TTestProgram.cs  ttest.csproj
c++/: CMakeLists.txt
c++/src/: DataFile.h  TTest.cpp  TTest.h  t-test.cpp
c-sharp-dotnet/: TTest.cs  TTestProgram.cs
c/src/: array-demo.c  t-test.c  util.c  util.h
c/src/generics/: array.h
c/src/statistics/: datafile.c  datafile.h  doublearray.c  doublearray.h  ttest.c  ttest.h  util.c  util.h
cobol/: t-test.cbl
d/: .gitignore  CMakeLists.txt  dub.json  t-test.d
d/Statistics/: DataFile.d  TTest.d
d/source/: main.d
d/source/statistics/: data.d  tests.d
d/source/testing/: unit.d
data/: data.csv
freebasic/: .gitignore
freebasic/src/: main.bas
freebasic/src/Statistics/: DataFile.bas  DataFile.bi  DataTable.bas  DataTable.bi  OptionalValue.bas  OptionalValue.bi  OptionalValueVector.bas  OptionalValueVector.bi  TTest.bas  TTest.bi  Types.bi
php/: autoload.php  phpunit.xml  t-test.php
php/Statistics/: DataFile.php  TTest.php
php/test/: bootstrap.php
php/test/unit/Statistics/: DataFileTest.php
ruby/: t-test.rb
ruby/Statistics/: DataFile.rb  TTest.rb
ruby/Test/: DataFileTest.rb
rust/: ttest  ttest.rs
swift/: DataFile.swift  Package.swift  TTest.swift  main
swift/Sources/Statistics/: DataFile.swift  TTest.swift
swift/Sources/TTest/: DataFile.swift  TTest.swift  main.swift
swift/Sources/Test/: DataFileTest.swift
